[gd_scene load_steps=2 format=3 uid="uid://cs34fc2804mo2"]

[ext_resource type="Script" path="res://tools/tabs/persistenceBtns.gd" id="1_2qy4v"]

[node name="persistenceBtns" type="HBoxContainer"]
theme_override_constants/separation = 15
alignment = 1
script = ExtResource("1_2qy4v")

[node name="btnReload" type="Button" parent="."]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Reload
"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="btnSave" type="Button" parent="."]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
disabled = true
text = "Save | Create"

[node name="btnDelete" type="Button" parent="."]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
disabled = true
text = "Delete"

[node name="dlgSave" type="ConfirmationDialog" parent="."]

[node name="dlgDelete" type="ConfirmationDialog" parent="."]
